<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mukhtar.exapple.com.solutions_book.Fragments.EditMyBook">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/edittext_name_of_new_book"
        android:id="@+id/edittext_change_name_of_book"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edittext_author_of_new_book"
        android:ems="10"
        android:id="@+id/edittext_change_book_author"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edittext_link_of_new_boook"
        android:ems="10"
        android:id="@+id/edittext_change_book_link"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edittext_change_book_chapter_count"
        android:hint="@string/edittext_change_book_chapter_count"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_change_categories_data" />

    <Button
        android:text="@string/button_change_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_change_book" />

</LinearLayout>
