<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Search..."
        android:ems="10"
        android:id="@+id/edittext_search_book"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/edittext_search_book"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/radio_book_by">
        <RadioButton
            android:text="@string/radio_search_book_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_book_by_author"/>

        <RadioButton
            android:text="@string/radio_search_book_by_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_book_by_name"/>
    </RadioGroup>

    <Button
        android:text="@string/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_search_books"
        android:layout_alignTop="@+id/radio_book_by"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />
</RelativeLayout>