<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mukhtar.exapple.com.solutions_book.BooksAppereance.MyBooks">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textview_username"
        android:text=""
        android:id="@+id/textview_username"/>

    <RadioGroup
        android:id="@+id/radio_group_show_my_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_choose_my_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_my_books"/>

        <RadioButton
            android:id="@+id/radio_button_choose_liked_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_liked_books" />

        <RadioButton
            android:id="@+id/radio_button_add_new_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_new_book" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout_my_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

        </FrameLayout>
    </ScrollView>


</LinearLayout>
